tests/baselines/reference/typeGuardConstructorDerivedClass(strict=true).errors.txt
typeGuardConstructorDerivedClass.ts(3,5): error TS2564: Property 'property1' has no initializer and is not definitely assigned in the constructor.
typeGuardConstructorDerivedClass.ts(7,5): error TS2564: Property 'property2' has no initializer and is not definitely assigned in the constructor.
typeGuardConstructorDerivedClass.ts(11,5): error TS2454: Variable 'var1' is used before being assigned.
typeGuardConstructorDerivedClass.ts(13,10): error TS2339: Property 'property1' does not exist on type 'never'.
typeGuardConstructorDerivedClass.ts(15,5): error TS2454: Variable 'var1' is used before being assigned.
typeGuardConstructorDerivedClass.ts(26,5): error TS2454: Variable 'var2' is used before being assigned.
typeGuardConstructorDerivedClass.ts(29,5): error TS2454: Variable 'var2' is used before being assigned.
typeGuardConstructorDerivedClass.ts(35,5): error TS2564: Property 'property1' has no initializer and is not definitely assigned in the constructor.
typeGuardConstructorDerivedClass.ts(39,5): error TS2564: Property 'property2' has no initializer and is not definitely assigned in the constructor.
typeGuardConstructorDerivedClass.ts(43,5): error TS2454: Variable 'let3' is used before being assigned.
typeGuardConstructorDerivedClass.ts(46,5): error TS2454: Variable 'let3' is used before being assigned.
typeGuardConstructorDerivedClass.ts(52,5): error TS2564: Property 'property1' has no initializer and is not definitely assigned in the constructor.
typeGuardConstructorDerivedClass.ts(56,5): error TS2564: Property 'property1' has no initializer and is not definitely assigned in the constructor.
typeGuardConstructorDerivedClass.ts(60,5): error TS2454: Variable 'let4' is used before being assigned.
typeGuardConstructorDerivedClass.ts(63,5): error TS2454: Variable 'let4' is used before being assigned.


==== typeGuardConstructorDerivedClass.ts (15 errors) ====
    // Derived class with different structures
    class C1 {
        property1: number;
        ~~~~~~~~~
!!! error TS2564: Property 'property1' has no initializer and is not definitely assigned in the constructor.
    }
    
    class C2 extends C1 {
        property2: number;
        ~~~~~~~~~
!!! error TS2564: Property 'property2' has no initializer and is not definitely assigned in the constructor.
    }
    
    let var1: C2 | string;
    if (var1.constructor === C1) {
        ~~~~
!!! error TS2454: Variable 'var1' is used before being assigned.
        var1; // never
        var1.property1; // error
             ~~~~~~~~~
!!! error TS2339: Property 'property1' does not exist on type 'never'.
    }
    if (var1.constructor === C2) {
        ~~~~
!!! error TS2454: Variable 'var1' is used before being assigned.
        var1; // C2
        var1.property1; // number
    }
    
    // Derived classes with the same structure
    class C3 {}
    
    class C4 extends C3 {}
    
    let var2: C4 | string;
    if (var2.constructor === C3) {
        ~~~~
!!! error TS2454: Variable 'var2' is used before being assigned.
        var2; // never
    }
    if (var2.constructor === C4) {
        ~~~~
!!! error TS2454: Variable 'var2' is used before being assigned.
        var2; // C4
    }
    
    // Disjointly structured classes
    class C5 {
        property1: number;
        ~~~~~~~~~
!!! error TS2564: Property 'property1' has no initializer and is not definitely assigned in the constructor.
    }
    
    class C6 {
        property2: number;
        ~~~~~~~~~
!!! error TS2564: Property 'property2' has no initializer and is not definitely assigned in the constructor.
    }
    
    let let3: C6 | string;
    if (let3.constructor === C5) {
        ~~~~
!!! error TS2454: Variable 'let3' is used before being assigned.
        let3; // never
    }
    if (let3.constructor === C6) {
        ~~~~
!!! error TS2454: Variable 'let3' is used before being assigned.
        let3; // C6
    }
    
    // Classes with the same structure
    class C7 {
        property1: number
        ~~~~~~~~~
!!! error TS2564: Property 'property1' has no initializer and is not definitely assigned in the constructor.
    }
    
    class C8 {
        property1: number;
        ~~~~~~~~~
!!! error TS2564: Property 'property1' has no initializer and is not definitely assigned in the constructor.
    }
    
    let let4: C8 | string;
    if (let4.constructor === C7) {
        ~~~~
!!! error TS2454: Variable 'let4' is used before being assigned.
        let4; // never
    }
    if (let4.constructor === C8) {
        ~~~~
!!! error TS2454: Variable 'let4' is used before being assigned.
        let4; // C8
    }
    